test/spec_vectors/global/fail/module_43.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-global.set-value-empty-in-br_if (i32.const 0) (block (br_if 0 (global.set $x)))))